# gen_svg

./: Cargo.toml  Dockerfile  devices.json  style.css  table.json
config/: devices.json  gradient.xml  style.css  style.toml
src/: config.rs  create_svg.rs  create_svg_metering.rs  element.rs  gen_element.rs  get_projects.rs  main.rs  my_utils.rs  parse.rs  shape.rs
src/config/: gradient.rs  line_style.rs  parameters.rs  path_style.rs  polygon_style.rs  rectangle_style.rs  style.rs.bak  text_style.rs
src/element/: grid.rs  project.rs  table.rs
src/gen_element/: col_header.rs  row_headers.rs
src/get_projects/: mock_projects.rs  project.rs
src/my_utils/: date.rs  device.rs
src/parse/: c2ps.rs  gradient.rs  grid.rs  parameters.rs  project.rs  table.rs  today_line.rs
src/shape/: line.rs  path.rs  polygon.rs  rectangle.rs  text.rs
