[package]
name = "gen_svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
svg = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
log = "0.4"
#env_logger = "0.9"
simplelog = "0.11.2"
serde_json = "1.0"