[package]
name = "gen_svg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
svg = "0.13.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-xml-rs = "0.6.0"
toml = "0.5"
log = "0.4"
#env_logger = "0.9"
simplelog = "0.11.2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.9.3"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
